@@ -42,7 +42,7 @@ public class ImageSourceValidator {
                @Override
                public void handleEvent(MessageBoxEvent be) {
                   if (be.getButtonClicked().getItemId().equals(Dialog.YES)) {
-                     Window.open("login.jsp", "_self", "");
+                     Window.Location.reload();
                   }
                }
                
