@@ -1,6 +1,9 @@
 Pro 1.1.0
 =========
 
+Fixes:
+ - Fixed: On session timeout, URL redirection is incorrect (MODELER-539)
+
 New features:
  - Use XML as persistence format for UI configuration instead of Java serialization (MODELER-450)
  - Have an export/import functionality for a user configuration (MODELER-390)
